@@ -10,8 +10,11 @@
 #' @aliases cluster01
 #' @aliases clusterK
 #'
-#' @param D either a \code{n x n} matrix of 0-1 values or a \code{p x n} matrix of data.
-#' @param clusterFunction clusterFunction a function that clusters a nxn matrix
+#' @param x \code{p x n} data matrix on which to run the clustering (samples in
+#'   columns).
+#' @param diss \code{n x n} data matrix of dissimilarities between the samples
+#'   on which to run the clustering
+##' @param clusterFunction clusterFunction a function that clusters a nxn matrix
 #'   of dissimilarities/distances. Can also be given character values to
 #'   indicate use of internal wrapper functions for default methods. See Details
 #'   for the format of what the function must take as arguments and what format
@@ -218,10 +221,10 @@ clusterD<-function(x=NULL, diss=NULL,clusterFunction=c("hierarchical01","tight",
 	#######################
 	if(typeAlg=="01") {
 	  if(any(D>1)) stop("distance function must give values between 0 and 1 for clusterFunction", clusterFunction)
-		res<-do.call("cluster01",c(list(D=D,clusterFunction=clusterFunction,clusterArgs=clusterArgs,checkArgs=checkArgs),passedArgs))
+		res<-do.call("cluster01",c(list(diss=D,clusterFunction=clusterFunction,clusterArgs=clusterArgs,checkArgs=checkArgs),passedArgs))
 	}
 	if(typeAlg=="K") {
-		res<-do.call("clusterK",c(list(D=D,clusterFunction=clusterFunction,clusterArgs=clusterArgs,checkArgs=checkArgs),passedArgs))
+		res<-do.call("clusterK",c(list(diss=D,clusterFunction=clusterFunction,clusterArgs=clusterArgs,checkArgs=checkArgs),passedArgs))
 	}
 
 	#######################
@@ -260,8 +263,9 @@ clusterD<-function(x=NULL, diss=NULL,clusterFunction=c("hierarchical01","tight",
 
 .args01<-c("alpha")
 #' @rdname clusterD
-cluster01<-function(D, clusterFunction=c("hierarchical01","tight"), alpha=0.1, clusterArgs=NULL,checkArgs)
+cluster01<-function(diss, clusterFunction=c("hierarchical01","tight"), alpha=0.1, clusterArgs=NULL,checkArgs)
 {
+  D<-diss
 	if(!is.function(clusterFunction)){
 		method<-match.arg(clusterFunction)
 		##These return lists of indices of clusters satisifying alpha criteria
@@ -411,8 +415,9 @@ cluster01<-function(D, clusterFunction=c("hierarchical01","tight"), alpha=0.1, c
 
 .argsK<-c("findBestK","k","kRange","removeSil","silCutoff")
 #' @rdname clusterD
-clusterK<-function(D,  clusterFunction=c("pam","hierarchicalK"),findBestK=FALSE, k, kRange,removeSil=FALSE,silCutoff=0,clusterArgs=NULL,checkArgs)
+clusterK<-function(diss,  clusterFunction=c("pam","hierarchicalK"),findBestK=FALSE, k, kRange,removeSil=FALSE,silCutoff=0,clusterArgs=NULL,checkArgs)
 {
+  D<-diss
   if(!findBestK && missing(k)) stop("If findBestK=FALSE, must provide k")
   if(findBestK){
     if(missing(kRange)){
