@@ -118,7 +118,7 @@ setMethod(
     #fix those pairs that have no clusterings for which they are both not '-1'
     diag(sharedPerct)[is.na(diag(sharedPerct)) | is.nan(diag(sharedPerct))]<-1 #only happens if -1 in all samples...
     sharedPerct[is.na(sharedPerct) | is.nan(sharedPerct)] <- 0 
-    cl <- clusterD(D=1-sharedPerct, clusterFunction=clusterFunction,
+    cl <- clusterD(diss=1-sharedPerct, clusterFunction=clusterFunction,
                    alpha=1-proportion, minSize=minSize, format="vector",
                    clusterArgs=list(evalClusterMethod=c("average")))
 
